ECS (#47)
* provided basic command line interface for ECS

* fat fingered typo

* completed parcing. now it's only implementation

* getting there with zookeeper

* prettified files

* getting there

* proper string comparison

* implemented initial zookeper nodes znode still wip

* initilize ecs almost all working

* added server side zookeeper functionality

* Refactor

* cleanup

* delete more bogus files when ant clean

* all tests passing; added special handling when starting server as standalone

* formatting

* perf test working with this version; cache socket connections in KVStore

* added add/remove + refactored

* optimizations

* google format

* did more stuff

* google format

* added new test to ensure hash key check works properly

* added one more ECSUtils test

* added ECS acceptance tests

* formatting

* removed hardcoded path; added seperate acceptance tests

* refactor: split ecs into CLI and client

* google java formatting

* wildcard import

* protect against bad input

* handle node crashes properly

* cleanup and remove wildcard imports

* format

* robust to bad nodename in removeNode

* cleanup logs

* better handling of client connections

* fix dumb bug

* formatting

* more error handling

* more cleanup in KVStore, perftest asserts

* format

* format with newer google java formaty

* renaming. close ecs socket. small additions

* Typos and error handling

* perf testing

* fmt

* fix breaking test by changing max key size

Co-authored-by: Polina Govorkova <catchingthegist@gmail.com>
Co-authored-by: DavidTraina <david.traina905@gmail.com>